# hyperliquid-ai-botV

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  api.py  config.py  db.py  decision_engines.py  hl_client.py  journal.py  models.py  risk.py  service.py
app/static/: app.js  index.html
tests/: test_risk.py
